# kr-enforcement-cases

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/curated/: dart_matches.csv  manual_patches.json
docs/: data_sources.md  model_delegation_matrix.md  product_direction.md  sfc_source1_relevance.md
reports/: beneish-validation.md  beneish_ratios.csv  blind-test-review.md  cohort-comparison.md  dataset-state-2026-03-17.md  fss-enforcement-analysis.md  research-journey.md  scored_index.csv  sfc-source1-session1.md  violations.csv
scripts/: sfc_scrape_feasibility.py
src/kr_enforcement_cases/: __init__.py  build_violation_db.py  cohort_comparison.py  compute_beneish.py  constants.py  download_prioritised.py  enrich_fss_cases.py  enrich_sfc1_cases.py  enrich_source2.py  extract_hwp.py  match_dart_companies.py  normalise_fss.py  parse_fss_pdf.py  parse_sfc1_pdfs.py  paths.py  score_cases.py  scrape_fss_cases.py  scrape_fss_source2.py  scrape_sfc_source1.py
tests/: conftest.py  test_enrich_fss_cases.py  test_parse_fss_pdf.py  test_score_cases.py
